--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - test
+  - deploy
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
@@ -176,3 +177,17 @@ test_mode_report:
     - cd mode-report
   only:
     - main
+
+deploy:
+  stage: deploy
+  tags:
+    - factory-monitoring-api
+  script:
+    - copy /home/sysadm/factory-monitoring/api-gateway/src/main/resources/application.yml api-gateway/src/main/resources/application.yml
+    - copy /home/sysadm/api-gateway/src/main/resources/keystore.p12 api-gateway/src/main/resources/keystore.p12
+    - docker-compose down
+    - docker-compose build
+    - docker-compose up -d
+  only:
+    - main
+
